# torchgw

./: CHANGELOG.md  COMMERCIAL_LICENSE.md  README.md  pyproject.toml
.github/workflows/: docs.yml
docs/: benchmark.rst  conf.py  improvements.md  index.rst  optimization-log.md  quickstart.rst
docs/_static/: robots.txt
tests/: test_distances.py  test_graph.py  test_sinkhorn.py  test_sinkhorn_grad.py  test_solver.py  test_spiral_swissroll.py  test_triton_sinkhorn.py  test_unbalanced_crossval.py
torchgw/: _distances.py  _embedding.py  _lowrank.py  _sampling.py  _solver.py
